# ASAG2024

./: .gitignore  dvc.yaml  pyproject.toml
asag2024/: configuration.py  extract_grades_with_regex.py
asag2024/benchmark_pipeline/: add_dvc_stage.sh  combine_pipeline.py  extract_files.sh  weight_grades.py
asag2024/benchmark_pipeline/datasets/: accuracy_conversion.py  beetle_parser.py  cunlp_loader.py  digiklausur_loader.py  mohler_parser.py  saf_loader.py  scientsbank_parser.py  stita_loader.py
asag2024/data_analysis/: altair_plots.py  count_tokens.py
asag2024/data_analysis/asag2024_dataset/: 01_compare.ipynb  02_CuNLP.ipynb  03_SAF.ipynb  04_Mohler.ipynb  05_Beetle.ipynb  06_Stita.ipynb  07_DigiKlausur.ipynb
data/: .gitignore  compressed.dvc
examples/: example_weights.ipynb
